# Orecchiette

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.txt
include/cameras/: camera.hpp  perspective.hpp
include/core/: OrthonormalBasis.hpp  bvh.hpp  defs.hpp  framebuffer.hpp  primitive.hpp  ray.hpp  renderer.hpp  scene.hpp  thread_pool.hpp  transform.hpp
include/emitters/: area.hpp  directional.hpp  emitter.hpp  point.hpp  point_light.hpp  spot.hpp  spot_light.hpp
include/managers/: input_manager.hpp
include/materials/: dielectric.hpp  diffuse.hpp  emissive.hpp  material.hpp  mirror.hpp
include/primitives/: primitive.hpp  rect.hpp  sphere.hpp  triangle.hpp  xyrect.hpp
include/shapes/: shape.hpp  sphere.hpp  triangle.hpp  xyrect.hpp  xzrect.hpp
include/textures/: texture.hpp
scenes/: dark.toml
src/: options.hpp  orecchiette.cpp
src/bsdfs/: brdf.hpp  bsdf.hpp
src/cameras/: perspective.cpp  perspective.hpp
src/core/: OrthonormalBasis.cpp  bvh.cpp  defs.hpp  framebuffer.cpp  framebuffer.hpp  options.cpp  options.hpp  primitive.cpp  ray.cpp  ray.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  thread_pool.cpp  transform.cpp  transform.hpp
src/emitters/: area.cpp  area.hpp  directional.cpp  directional.hpp  emitter.cpp  point.cpp  point_light.cpp  spot.cpp  spot_light.cpp
src/lights/: light_object.hpp
src/managers/: input_manager.cpp
src/materials/: dielectric.cpp  diffuse.cpp  emissive.cpp  mirror.cpp
src/primitives/: primitive.hpp  rect.cpp  sphere.cpp  triangle.cpp  xyrect.cpp
src/samplers/: sampler.hpp  xorshift.cpp  xorshift.hpp
src/shapes/: sphere.cpp  triangle.cpp  xyrect.cpp  xzrect.cpp
src/textures/: texture.hpp
src/utils/: math.hpp
